// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayManagementToolbar should render a management toolbar with actions in active state 1`] = `
<nav class="management-bar management-bar-primary navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="custom-control custom-checkbox">
          <label>
            <input checked="" class="custom-control-input" ref="input" type="checkbox">
            <span class="custom-control-indicator"></span>
            <span class="custom-control-description sr-only">Select Page</span>
          </label>
        </div>
      </li>
      <li class="nav-item">
        <span class="navbar-text">1 of 10
          <span class="navbar-breakpoint-down-d-none">items selected</span>
        </span>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn btn-link" type="button">Select all</button>
      </li>
    </ul>
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <title>ellipsis-v</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#editurl">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#deleteurl">Delete</a>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with ascending sorting 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with classes 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md my-custom-class">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with classes in active state 1`] = `
<nav class="management-bar management-bar-primary navbar navbar-expand-md my-custom-class">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="custom-control custom-checkbox">
          <label>
            <input checked="" class="custom-control-input" ref="input" type="checkbox">
            <span class="custom-control-indicator"></span>
            <span class="custom-control-description sr-only">Select Page</span>
          </label>
        </div>
      </li>
      <li class="nav-item">
        <span class="navbar-text">1 of 10
          <span class="navbar-breakpoint-down-d-none">items selected</span>
        </span>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn btn-link" type="button">Select all</button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with descending sorting 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-down-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items and no done button 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="dropdown nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link navbar-breakpoint-down-d-none btn-unstyled">Filter and Order
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
              <title>caret-bottom</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#caret-bottom"></use>
            </svg>
          </button>
          <form>
            <div class="dropdown-menu">
              <li>
                <a class=" dropdown-item" href="#myItem1">Item 1</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#myItem2">Item 2</a>
              </li>
            </div>
          </form>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type checkbox 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="dropdown nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link navbar-breakpoint-down-d-none btn-unstyled">Filter and Order
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
              <title>caret-bottom</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#caret-bottom"></use>
            </svg>
          </button>
          <form>
            <div class="dropdown-menu">
              <div class="dropdown-item">
                <div class="custom-control custom-checkbox custom-control-inline">
                  <label>
                    <input class="custom-control-input" name="item1checkbox" value="1" ref="input" type="checkbox">
                    <span class="custom-control-indicator"></span>
                    <span class="custom-control-description">Item 1</span>
                  </label>
                </div>
              </div>
              <div class="dropdown-item">
                <div class="custom-control custom-checkbox custom-control-inline">
                  <label>
                    <input class="custom-control-input" name="item2checkbox" value="2" ref="input" type="checkbox">
                    <span class="custom-control-indicator"></span>
                    <span class="custom-control-description">Item 2</span>
                  </label>
                </div>
              </div>
              <div class="dropdown-section">
                <button class="btn btn-block btn-primary" type="button">Done</button>
              </div>
            </div>
          </form>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type item 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="dropdown nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link navbar-breakpoint-down-d-none btn-unstyled">Filter and Order
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
              <title>caret-bottom</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#caret-bottom"></use>
            </svg>
          </button>
          <form>
            <div class="dropdown-menu">
              <li>
                <a class=" dropdown-item" href="#myItem1">Item 1</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#myItem2">Item 2</a>
              </li>
              <div class="dropdown-section">
                <button class="btn btn-block btn-primary" type="button">Done</button>
              </div>
            </div>
          </form>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with filters dropdown with items of type radio 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="dropdown nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link navbar-breakpoint-down-d-none btn-unstyled">Filter and Order
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
              <title>caret-bottom</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#caret-bottom"></use>
            </svg>
          </button>
          <form>
            <div class="dropdown-menu">
              <div class="dropdown-subheader">Group 1</div>
              <div aria-label="Group 1" role="radiogroup">
                <div class="dropdown-item">
                  <div class="custom-control custom-radio custom-control-inline">
                    <label>
                      <input class="custom-control-input" name="item1radio" value="1" ref="input" type="radio" role="radio">
                      <span class="custom-control-indicator"></span>
                      <span class="custom-control-description">Item 1</span>
                    </label>
                  </div>
                </div>
                <div class="dropdown-item active">
                  <div class="custom-control custom-radio custom-control-inline">
                    <label>
                      <input checked="" class="custom-control-input" name="item1radio" value="2" ref="input" type="radio" role="radio">
                      <span class="custom-control-indicator"></span>
                      <span class="custom-control-description">Item 2</span>
                    </label>
                  </div>
                </div>
                <div class="dropdown-item">
                  <div class="custom-control custom-radio custom-control-inline">
                    <label>
                      <input disabled="disabled" class="custom-control-input" name="item1radio" value="3" ref="input" type="radio" role="radio">
                      <span class="custom-control-indicator"></span>
                      <span class="custom-control-description">Item 3</span>
                    </label>
                  </div>
                </div>
              </div>
              <div class="dropdown-section">
                <button class="btn btn-block btn-primary" type="button">Done</button>
              </div>
            </div>
          </form>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with id 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md" id="myId">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with id in active state 1`] = `
<nav class="management-bar management-bar-primary navbar navbar-expand-md" id="myId">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="custom-control custom-checkbox">
          <label>
            <input checked="" class="custom-control-input" ref="input" type="checkbox">
            <span class="custom-control-indicator"></span>
            <span class="custom-control-description sr-only">Select Page</span>
          </label>
        </div>
      </li>
      <li class="nav-item">
        <span class="navbar-text">1 of 10
          <span class="navbar-breakpoint-down-d-none">items selected</span>
        </span>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn btn-link" type="button">Select all</button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with plus button with more than one option 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none btn-primary">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
              <title>plus</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Add Content 1</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#2">Add Content 2</a>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with plus button with one option 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <a class="btn btn-primary nav-btn nav-btn-monospaced navbar-breakpoint-down-d-none" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with search action url 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form action="mySearchURL" role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with search form name 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form name="mySearchName" role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with search input name 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" name="mySearchName" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with selection enabled 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="custom-control custom-checkbox">
          <label>
            <input class="custom-control-input" ref="input" type="checkbox">
            <span class="custom-control-indicator"></span>
            <span class="custom-control-description sr-only">Select Page</span>
          </label>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with state active 1`] = `
<nav class="management-bar management-bar-primary navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <div class="custom-control custom-checkbox">
          <label>
            <input checked="" class="custom-control-input" ref="input" type="checkbox">
            <span class="custom-control-indicator"></span>
            <span class="custom-control-description sr-only">Select Page</span>
          </label>
        </div>
      </li>
      <li class="nav-item">
        <span class="navbar-text">1 of 10
          <span class="navbar-breakpoint-down-d-none">items selected</span>
        </span>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn btn-link" type="button">Select all</button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render a management toolbar with view types 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="dropdown nav-item">
        <div class="dropdown">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn nav-link nav-link-monospaced btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list">
              <title>list</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#list"></use>
            </svg>
          </button>
          <div class="dropdown-menu dropdown-menu-indicator-start">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item active">
                  <div class="dropdown-item-indicator">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-list">
                      <title>list</title>
                      <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#list"></use>
                    </svg>
                  </div>List</a>
              </li>
              <li>
                <a class=" dropdown-item disabled" href="javascript:;">
                  <div class="dropdown-item-indicator">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-table">
                      <title>table</title>
                      <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#table"></use>
                    </svg>
                  </div>Table</a>
              </li>
              <li>
                <a class=" dropdown-item">
                  <div class="dropdown-item-indicator">
                    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-cards2">
                      <title>cards2</title>
                      <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#cards2"></use>
                    </svg>
                  </div>Card</a>
              </li>
            </ul>
          </div>
        </div>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayManagementToolbar should render the default markup 1`] = `
<nav class="management-bar management-bar-light navbar navbar-expand-md">
  <div class="container">
    <ul class="navbar-nav">
      <li class="nav-item">
        <button class="btn nav-link nav-link-monospaced order-arrow-up-active btn-unstyled" aria-label="order-arrow" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow">
            <title>order-arrow</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow"></use>
          </svg>
        </button>
      </li>
    </ul>
    <div class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down">
      <div class="container">
        <form role="search">
          <div class="input-group input-group-inset">
            <div class="input-group-input">
              <input class="form-control" placeholder="Search for..." ref="search" type="text">
            </div>
            <span class="input-group-inset-item">
              <button class="btn navbar-breakpoint-d-none btn-unstyled" aria-label="times" type="button">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <title>times</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#times"></use>
                </svg>
              </button>
              <button class="btn navbar-breakpoint-d-block btn-unstyled" aria-label="search" type="submit">
                <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
                  <title>search</title>
                  <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
                </svg>
              </button>
            </span>
          </div>
        </form>
      </div>
    </div>
    <ul class="navbar-nav">
      <li class="nav-item navbar-breakpoint-d-none">
        <button class="btn nav-link nav-link-monospaced btn-unstyled" aria-label="search" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-search">
            <title>search</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#search"></use>
          </svg>
        </button>
      </li>
      <li class="nav-item">
        <button class="btn nav-btn nav-btn-monospaced btn-primary" aria-label="plus" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
            <title>plus</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#plus"></use>
          </svg>
        </button>
      </li>
    </ul>
  </div>
</nav>
`;
